--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-util": "^3.0.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "typescript": "^2.1.5",
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
